--- a/website/sdds-dfa-docs/docs/components/Notification.mdx
+++ b/website/sdds-dfa-docs/docs/components/Notification.mdx
@@ -46,9 +46,18 @@ type NotificationPlacement = 'center' | 'top' | 'bottom' | 'right' | 'left';
 И производные комбинации, например `bottom-left` или `top-right`.
 
 ### Вызов уведомления
+
+:::info
+Уведомления закрываются автоматически по истечению указанного `timeout` в миллисекундах или если передан `0` или `null` то будут висеть бесконечно.
+:::
+
+:::tip
+`onTimeoutClose` - вызывается при автоматическом закрытии по timeout
+:::
+
 После подключения `NotificationsProvider` станет возможен вызов функции `addNotification`, который приведет к отображению оповещения.
 Функция принимает значения свойств компонента `Notification`, включая необязательное поле `id`. И возвращает сгенерированный или переданный `id`, по которому можно закрыть оповещение через вызов `closeNotification`.
-Оповещение закроется автоматически по истечению указанного `timeout` в миллисекундах или будет висеть вечно, если передан `0` или `null`.
+
 
 ```tsx live
 import React, { useCallback } from 'react';
@@ -60,6 +69,9 @@ export function App() {
             id: 'incoming-call',
             title: 'Входящий вызов',
             children: 'Принять?',
+            onTimeoutClose: () => {
+                console.log("Callback, вызываемый при автоматическом закрытии по timeout.")
+            },
         }, 3000);
     }, []);
 
