feat(sdds-cs): update story and docs for NumberFormat

--- a/website/sdds-cs-docs/docs/components/NumberFormat.mdx
+++ b/website/sdds-cs-docs/docs/components/NumberFormat.mdx
@@ -26,19 +26,19 @@ export function App() {
     return (
         <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem' }}>
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator=" "
                 decimalSeparator="."
                 defaultValue="123456.789"
             />
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator="/"
                 decimalSeparator=","
                 defaultValue="123456,789"
             />
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator=","
                 decimalSeparator="$"
                 defaultValue="123456$789"
@@ -63,25 +63,25 @@ export function App() {
     return (
         <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem' }}>
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator=" "
                 defaultValue="123456789"
                 thousandsGroupStyle="thousand"
             />
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator=" "
                 defaultValue="123456789"
                 thousandsGroupStyle="lakh"
             />
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator=" "
                 defaultValue="123456789"
                 thousandsGroupStyle="wan"
             />
             <NumberFormat
-                size="l"
+                size="s"
                 thousandSeparator=" "
                 defaultValue="123456789"
                 thousandsGroupStyle="none"
@@ -103,7 +103,7 @@ export function App() {
     return (
         <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem' }}>
             <NumberFormat
-                size="l"
+                size="s"
                 defaultValue="123"
                 thousandSeparator=" "
                 decimalSeparator="."
@@ -111,7 +111,7 @@ export function App() {
                 fixedDecimalScale
             />
             <NumberFormat
-                size="l"
+                size="s"
                 defaultValue="123.1"
                 thousandSeparator=" "
                 decimalSeparator="."
@@ -134,7 +134,7 @@ export function App() {
     return (
         <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem' }}>
             <NumberFormat
-                size="l"
+                size="s"
                 defaultValue="-123"
                 thousandSeparator=" "
                 decimalSeparator="."
@@ -156,7 +156,7 @@ export function App() {
     return (
         <div style={{ display: 'flex', flexDirection: 'column', gap: '1rem' }}>
             <NumberFormat
-                size="l"
+                size="s"
                 defaultValue="000123.456"
                 thousandSeparator=" "
                 decimalSeparator="."
